--- a/package.json
+++ b/package.json
@@ -9,13 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@expo/metro-runtime": "~3.2.1",
+    "@mui/icons-material": "^5.16.0",
+    "@mui/material": "^5.16.0",
+    "@react-native-google-signin/google-signin": "^12.2.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.4.0",
+    "axios": "^1.7.2",
     "expo": "~51.0.19",
+    "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-date-picker": "^5.0.4",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.10",
+    "expo-auth-session": "~5.5.2",
+    "expo-random": "~14.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.3",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.5.3"
   },
   "private": true
 }
